--- a/index.html
+++ b/index.html
@@ -4,10 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>typing speed test</title>
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
     <div class="wrapper">
-        
+        <div class="content-box">
+            <div class="typing-text">
+                <p>Authors often misinterpret the lettuce as a folklore rabbi, when in actuality it feels more like an uncursed bacon. Pursued distances show us how mother-in-laws can be charleses. Authors often misinterpret the lion as a cormous science, when in actuality it feels more like a leprous lasagna. Recent controversy aside, their band was, in this moment, a racemed suit. The clutch of a joke becomes a togaed chair. The first pickled chess is.
+                </p>
+            </div>
+            <div class="content">
+                <ul class="result-details">
+                    <li><p>Time Left</p><span></span>s</li>
+                    <li><p>Mistakes</b><span></span></li>
+                    <li><p>WPM</p><span></span></li>
+                    <li><p>CPM</p><span></span></li>
+                </ul>
+                <button>Try Again</button>
+            </div>
+        </div>
     </div>
+
+    <script src="assets/js/paragraphs.js"></script>
+    <script src="assets/js/script.js"></script>
 </body>
 </html>
