--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
             </div>
             <div class="content">
                 <ul class="result-details">
-                    <li><p>Time Left: </p><span>60</span>s</li>
-                    <li><p>Mistakes: </p><span></span></li>
-                    <li><p>WPM: </p><span></span></li>
-                    <li><p>CPM: </p><span></span></li>
+                    <li><p>Time Left: </p><span class="time"></span>s</li>
+                    <li><p>Mistakes: </p><span class="mistakes"></span></li>
+                    <li><p>WPM: </p><span class="wpm"></span></li>
+                    <li><p>CPM: </p><span class="cpm"></span></li>
                 </ul>
                 <button class="try-again">Try Again</button>
             </div>
